--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/INDEX.CSS">
     <script src="./index.js"></script>
-
+<link rel="stylesheet" href="./css/index.css">
     <title>Sports Shop</title>
 </head>
 
-<body style="background-color:red;">
+<body>
     <button class="btn btn-success" onclick="GoToNewPage()">Go To New</button>
     <div class="container mt-5">
         <div class="row">
-            <h1 class="text-center">Welcome</h1>
+            <h1 class="text-center wel">Welcome to Sports Club</h1>
         </div>
        <form onsubmit="CalculateThePrice(); return false">
         <div class="row">
